Add mutation and verification scripts, enhance testing framework
- Introduced MutationCheck.java to enforce mutation testing on safety rules.
- Added VerifyAll.java to run comprehensive tests across all modules and configurations.
- Created WalChaosTest.java to ensure chaos scenarios are validated during the build process.
- Added SHA256SUMS file for checksum verification of test resources.
- Enhanced the testing framework to ensure all scenarios are accounted for and failures are reported accurately.