@@ -19,9 +19,9 @@ import dev.mars.raftlog.storage.RaftStorage.LogEntryData;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * Calculates the delta between the current in-memory log and an incoming AppendEntries request.
@@ -36,10 +36,18 @@ import java.util.List;
  *   <li>New entries beyond our log are appended</li>
  * </ul>
  * <p>
+ * <b>It is not lenient.</b> Everything it is given is data the node already holds, so an
+ * inconsistency is a bug in the caller. A plan built from inconsistent arguments would be refused
+ * by the storage later, further from the cause, so it is refused here with an
+ * {@link IllegalArgumentException} (or a {@link NullPointerException} for a null argument or
+ * element) and nothing is returned. What remains legal is what Raft itself permits: a heartbeat
+ * with no entries, entries the follower already holds, entries already covered by its snapshot,
+ * and a conflicting tail.
+ * <p>
  * <b>Usage Pattern (Prepare → Persist → Apply):</b>
  * <pre>{@code
  * // 1. Calculate the plan (no mutations)
- * AppendPlan plan = AppendPlan.from(startIndex, incomingEntries, currentLog);
+ * AppendPlan plan = AppendPlan.from(startIndex, incomingEntries, currentLog, compactionBoundary);
  *
  * // 2. Persist to WAL
  * wal.truncateSuffix(plan.truncateFromIndex());  // if needed
@@ -60,12 +68,25 @@ public record AppendPlan(
     private static final Logger LOG = LoggerFactory.getLogger(AppendPlan.class);
 
     /**
-     * Creates an AppendPlan with defensive copy of entries.
+     * Validates the plan and takes a defensive copy of the entries.
+     *
+     * @throws NullPointerException     if the entry list or one of its elements is null
+     * @throws IllegalArgumentException if the truncation index is below 1, the entries are not a
+     *                                  contiguous run with non-decreasing terms, or a replacement
+     *                                  does not begin at the truncation index
      */
     public AppendPlan {
-        entriesToAppend = entriesToAppend == null
-                ? Collections.emptyList()
-                : List.copyOf(entriesToAppend);
+        Objects.requireNonNull(entriesToAppend, "entriesToAppend must not be null; use an empty list");
+        entriesToAppend = List.copyOf(entriesToAppend);             // also rejects null elements
+        if (truncateFromIndex != null && truncateFromIndex < 1) {
+            throw new IllegalArgumentException("truncateFromIndex must be at least 1, got " + truncateFromIndex);
+        }
+        requireWellFormedRun("entriesToAppend", entriesToAppend);
+        if (truncateFromIndex != null && !entriesToAppend.isEmpty()
+                && entriesToAppend.getFirst().index() != truncateFromIndex) {
+            throw new IllegalArgumentException("a replacement must begin at truncateFromIndex " + truncateFromIndex
+                    + " but begins at " + entriesToAppend.getFirst().index() + ", which would leave a hole or an overlap");
+        }
     }
 
     /**
@@ -73,24 +94,17 @@ public record AppendPlan(
      */
     public static AppendPlan empty() {
         LOG.debug("No-op append plan requested");
-        return new AppendPlan(null, Collections.emptyList());
+        return new AppendPlan(null, List.of());
     }
 
     /**
-     * Calculates the append plan by comparing incoming entries against the current log.
-     * <p>
-     * Algorithm:
-     * <ol>
-     *   <li>Walk through incoming entries starting at startIndex</li>
-     *   <li>If we have an entry at this position with matching term, skip it</li>
-     *   <li>If we have an entry with different term, mark for truncation from this point</li>
-     *   <li>If we don't have an entry, everything from here is new</li>
-     * </ol>
+     * Calculates the plan for a log that has never been prefix compacted, which therefore is
+     * empty or begins at index 1. For a compacted log use
+     * {@link #from(long, List, List, long)}; this overload refuses one.
      *
      * @param startIndex      the log index where incoming entries begin (prevLogIndex + 1)
-     * @param incomingEntries the entries from the Leader's AppendEntries RPC
-     * @param currentLog      the current in-memory log; its first entry defines the base
-     *                        index, so a log compacted through a snapshot needs no adjustment
+     * @param incomingEntries the entries from the Leader's AppendEntries RPC; empty for a heartbeat
+     * @param currentLog      the current in-memory log
      * @return the calculated plan
      */
     public static AppendPlan from(long startIndex,
@@ -100,82 +114,103 @@ public record AppendPlan(
     }
 
     /**
-     * As {@link #from(long, List, List)}, for a log that has been prefix compacted.
+     * Calculates the append plan by comparing incoming entries against the current log.
      * <p>
-     * When compaction retained nothing the in-memory log is empty and cannot say where it
-     * begins, so the boundary has to be supplied. Incoming entries at or below it are
-     * already covered by the snapshot and are skipped.
+     * Algorithm:
+     * <ol>
+     *   <li>Walk through incoming entries starting at startIndex</li>
+     *   <li>An entry at or below the compaction boundary is in the snapshot: skip it</li>
+     *   <li>If we have an entry at this position with matching term, skip it</li>
+     *   <li>If we have an entry with different term, mark for truncation from this point</li>
+     *   <li>If we don't have an entry, everything from here is new</li>
+     * </ol>
      *
-     * @param compactionBoundary inclusive prefix compaction boundary, or 0 if never compacted;
-     *                           see {@code FileRaftStorage.compactionBoundary()}
+     * @param startIndex         the log index where incoming entries begin (prevLogIndex + 1)
+     * @param incomingEntries    the entries from the Leader's AppendEntries RPC; empty for a heartbeat
+     * @param currentLog         the current in-memory log, which must begin at
+     *                           {@code compactionBoundary + 1} when it is not empty
+     * @param compactionBoundary inclusive prefix compaction boundary, or 0 if never compacted; see
+     *                           {@code FileRaftStorage.compactionBoundary()}
+     * @return the calculated plan
+     * @throws NullPointerException     if a list or one of its elements is null
+     * @throws IllegalArgumentException if the arguments are inconsistent with each other or with
+     *                                  the rules of a Raft log; the message says which
      */
     public static AppendPlan from(long startIndex,
                                    List<LogEntryData> incomingEntries,
                                    List<LogEntryData> currentLog,
                                    long compactionBoundary) {
-        if (incomingEntries == null || incomingEntries.isEmpty()) {
-            LOG.debug("from() called with empty incoming entries: returning empty plan");
-            return empty();
+        Objects.requireNonNull(incomingEntries, "incomingEntries must not be null; pass an empty list for a heartbeat");
+        Objects.requireNonNull(currentLog, "currentLog must not be null");
+        if (startIndex < 1) {
+            throw new IllegalArgumentException("startIndex must be at least 1, got " + startIndex);
+        }
+        if (compactionBoundary < 0) {
+            throw new IllegalArgumentException("compactionBoundary must not be negative, got " + compactionBoundary);
+        }
+        requireWellFormedRun("currentLog", currentLog);
+        requireWellFormedRun("incomingEntries", incomingEntries);
+
+        if (!currentLog.isEmpty() && currentLog.getFirst().index() - 1 != compactionBoundary) {
+            throw new IllegalArgumentException("currentLog begins at index " + currentLog.getFirst().index()
+                    + ", so it was compacted through " + (currentLog.getFirst().index() - 1)
+                    + ", but compactionBoundary is " + compactionBoundary);
+        }
+        if (!incomingEntries.isEmpty() && incomingEntries.getFirst().index() != startIndex) {
+            throw new IllegalArgumentException("startIndex is " + startIndex + " but the first incoming entry is at index "
+                    + incomingEntries.getFirst().index());
+        }
+        long lastIndex = currentLog.isEmpty() ? compactionBoundary : currentLog.getLast().index();
+        // startIndex is at least 1, so startIndex - 1 cannot underflow; lastIndex + 1 could overflow.
+        if (startIndex - 1 > lastIndex) {
+            throw new IllegalArgumentException("entries beginning at " + startIndex + " would leave a gap after index "
+                    + lastIndex + "; the previous-entry check should have refused this request");
         }
 
-        LOG.debug("Calculating append plan: startIndex={}, incomingEntries={}, currentLog={}",
-                startIndex, incomingEntries.size(), currentLog.size());
+        LOG.debug("Calculating append plan: startIndex={}, incomingEntries={}, currentLog={}, compactionBoundary={}",
+                startIndex, incomingEntries.size(), currentLog.size(), compactionBoundary);
 
         Long truncateAt = null;
-        int firstNewEntryIdx = 0;
-        // The log carries its own indices; after prefix compaction position 0 is not index 1.
-        long baseIndex = currentLog.isEmpty() ? startIndex : currentLog.getFirst().index();
-
-        // Walk through incoming entries to find divergence point
+        int firstNew = incomingEntries.size();                      // until shown otherwise, nothing is new
         for (int i = 0; i < incomingEntries.size(); i++) {
-            long logIndex = startIndex + i;
-            long logPos = logIndex - baseIndex;
+            LogEntryData incoming = incomingEntries.get(i);
+            if (incoming.index() <= compactionBoundary) continue;   // already covered by the snapshot
 
-            // A boundary of 0 means the log was never compacted, so it excludes nothing.
-            boolean inSnapshot = compactionBoundary > 0 && logIndex <= compactionBoundary;
-            if (inSnapshot || logPos < 0) {
-                // Below the retained log: already covered by the snapshot, nothing to do
-                firstNewEntryIdx = i + 1;
-                LOG.debug("Incoming entry [{}] at index {} precedes the retained log (first index {}); skipping",
-                        i, logIndex, baseIndex);
-                continue;
-            }
-
-            if (logPos < currentLog.size()) {
-                // We have an entry at this position - check for conflict
-                LogEntryData existing = currentLog.get((int) logPos);
-                LogEntryData incoming = incomingEntries.get(i);
-
-                if (existing.term() != incoming.term()) {
-                    // Conflict! Truncate from here and append the rest
-                    truncateAt = logIndex;
-                    firstNewEntryIdx = i;
-                    LOG.debug("Conflict detected at index {}: existingTerm={}, incomingTerm={}; truncating from {}",
-                            logIndex, existing.term(), incoming.term(), truncateAt);
-                    break;
-                }
-                // Terms match - this entry already exists, skip it
-                firstNewEntryIdx = i + 1;
-            } else {
-                // We don't have this entry - everything from here is new
-                firstNewEntryIdx = i;
-                LOG.debug("Reached existing-log boundary at incoming position {} (logPos={}); entries from here are new",
-                        i, logPos);
+            long position = incoming.index() - compactionBoundary - 1;
+            if (position >= currentLog.size()) {                    // beyond what we hold: new from here on
+                firstNew = i;
                 break;
             }
+            LogEntryData held = currentLog.get((int) position);
+            if (held.term() != incoming.term()) {                   // conflict: replace from here on
+                truncateAt = incoming.index();
+                firstNew = i;
+                LOG.debug("Conflict detected at index {}: existingTerm={}, incomingTerm={}; truncating from {}",
+                        incoming.index(), held.term(), incoming.term(), truncateAt);
+                break;
+            }
+            if (!Arrays.equals(payloadOf(held), payloadOf(incoming))) {
+                // Raft creates at most one entry per index per term. Treating this as "already
+                // held" would hide a divergence; truncating would be wrong because the terms agree.
+                throw new IllegalArgumentException("entry " + incoming.index() + " has term " + incoming.term()
+                        + " in both logs but a different payload; the logs have diverged");
+            }
         }
 
-        // Build the list of entries to append
-        List<LogEntryData> toAppend;
-        if (firstNewEntryIdx >= incomingEntries.size()) {
-            // All entries already exist
-            toAppend = Collections.emptyList();
-        } else {
-            toAppend = new ArrayList<>(incomingEntries.subList(firstNewEntryIdx, incomingEntries.size()));
+        List<LogEntryData> toAppend = incomingEntries.subList(firstNew, incomingEntries.size());
+        if (!toAppend.isEmpty()) {
+            long precedingIndex = toAppend.getFirst().index() - 1;
+            if (precedingIndex > compactionBoundary) {
+                long precedingTerm = currentLog.get((int) (precedingIndex - compactionBoundary - 1)).term();
+                if (toAppend.getFirst().term() < precedingTerm) {
+                    throw new IllegalArgumentException("entry " + toAppend.getFirst().index() + " has term "
+                            + toAppend.getFirst().term() + " but would follow entry " + precedingIndex
+                            + " with the higher term " + precedingTerm);
+                }
+            }
         }
 
-        LOG.debug("Append plan resolved: truncateFromIndex={}, entriesToAppend={}",
-                truncateAt, toAppend.size());
+        LOG.debug("Append plan resolved: truncateFromIndex={}, entriesToAppend={}", truncateAt, toAppend.size());
         return new AppendPlan(truncateAt, toAppend);
     }
 
@@ -184,35 +219,39 @@ public record AppendPlan(
      * <p>
      * <b>CALL THIS ONLY AFTER WAL PERSISTENCE IS SUCCESSFUL.</b>
      * <p>
-     * This method mutates the provided list by:
-     * <ol>
-     *   <li>Truncating entries from truncateFromIndex (if set)</li>
-     *   <li>Appending all new entries</li>
-     * </ol>
+     * The log is checked against the plan before anything is changed, so a refused plan leaves it
+     * exactly as it was. An empty log accepts the plan as its beginning.
      *
      * @param memoryLog the in-memory log to mutate
+     * @throws NullPointerException     if the log is null
+     * @throws IllegalArgumentException if the truncation index lies outside the log, or the entries
+     *                                  would not continue it
      */
     public void applyTo(List<LogEntryData> memoryLog) {
-        // Step 1: Truncate if needed
-        if (truncateFromIndex != null) {
-            long baseIndex = memoryLog.isEmpty() ? truncateFromIndex : memoryLog.getFirst().index();
-            int fromPos = (int) (truncateFromIndex - baseIndex);
-            if (fromPos >= 0 && fromPos < memoryLog.size()) {
-                LOG.debug("Applying append plan: truncating in-memory log from position {} (index {})",
-                        fromPos, truncateFromIndex);
-                memoryLog.subList(fromPos, memoryLog.size()).clear();
-            } else {
-                LOG.debug("Skipping truncate in applyTo because fromPos {} is out of bounds for logSize {}",
-                        fromPos, memoryLog.size());
+        Objects.requireNonNull(memoryLog, "memoryLog must not be null");
+        int keep = memoryLog.size();
+        if (truncateFromIndex != null && !memoryLog.isEmpty()) {
+            long position = truncateFromIndex - memoryLog.getFirst().index();
+            if (position < 0 || position > memoryLog.size()) {
+                throw new IllegalArgumentException("truncateFromIndex " + truncateFromIndex + " lies outside the log, which holds "
+                        + memoryLog.getFirst().index() + " to " + memoryLog.getLast().index());
+            }
+            keep = (int) position;
+        }
+        if (!entriesToAppend.isEmpty() && keep > 0) {
+            long lastKept = memoryLog.get(keep - 1).index();
+            // lastKept + 1 is not computed: it could overflow at the top of the index space.
+            if (entriesToAppend.getFirst().index() - 1 != lastKept) {
+                throw new IllegalArgumentException("entries beginning at " + entriesToAppend.getFirst().index()
+                        + " do not continue the log, which would end at " + lastKept);
             }
         }
 
-        // Step 2: Append new entries
-        if (!entriesToAppend.isEmpty()) {
-            LOG.debug("Applying append plan: appending {} entries", entriesToAppend.size());
-        } else {
-            LOG.debug("Applying append plan: no entries to append");
+        if (keep < memoryLog.size()) {
+            LOG.debug("Applying append plan: truncating in-memory log from index {}", truncateFromIndex);
+            memoryLog.subList(keep, memoryLog.size()).clear();
         }
+        LOG.debug("Applying append plan: appending {} entries", entriesToAppend.size());
         memoryLog.addAll(entriesToAppend);
     }
 
@@ -235,5 +274,37 @@ public record AppendPlan(
      */
     public boolean requiresPersistence() {
         return requiresTruncation() || hasEntriesToAppend();
+    }
+
+    /** A null payload and an empty one are the same entry; the storage writes both as empty. */
+    private static byte[] payloadOf(LogEntryData entry) {
+        return entry.payload() == null ? new byte[0] : entry.payload();
+    }
+
+    /** Indices at least 1 and contiguous, terms non-negative and non-decreasing, no null element. */
+    private static void requireWellFormedRun(String name, List<LogEntryData> entries) {
+        LogEntryData previous = null;
+        for (LogEntryData entry : entries) {
+            Objects.requireNonNull(entry, name + " must not contain null");
+            // Contiguity first, so an index that wrapped past Long.MAX_VALUE is reported as what
+            // it is. previous.index() + 1 is never computed, because that is the wrap.
+            if (previous != null && (previous.index() == Long.MAX_VALUE || entry.index() - 1 != previous.index())) {
+                throw new IllegalArgumentException(name + " is not contiguous: index " + entry.index()
+                        + " cannot follow " + previous.index());
+            }
+            if (entry.index() < 1) {
+                throw new IllegalArgumentException(name + " holds index " + entry.index() + "; log indices start at 1");
+            }
+            if (entry.term() < 0) {
+                throw new IllegalArgumentException(name + " entry " + entry.index() + " has the negative term " + entry.term());
+            }
+            if (previous != null) {
+                if (entry.term() < previous.term()) {
+                    throw new IllegalArgumentException(name + " entry " + entry.index() + " has term " + entry.term()
+                            + " below the term " + previous.term() + " of the entry before it");
+                }
+            }
+            previous = entry;
+        }
     }
 }
